<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/viewEmployeeGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/viewEmployeeNameTextView"
            style="@style/App_TextViewStyle"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:text="@string/view_employee_name_text_view" />

        <TextView
            android:id="@+id/viewEmployeeEmailTextView"
            style="@style/App_TextViewStyle"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:text="@string/view_employee_email_text_view" />

        <TextView
            android:id="@+id/viewEmployeeNumberTextView"
            style="@style/App_TextViewStyle"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:text="@string/view_employee_number_text_view" />

        <TextView
            android:id="@+id/viewEmployeeJobTitleTextView"
            style="@style/App_TextViewStyle"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:text="@string/view_employee_job_title_text_view" />

        <TextView
            android:id="@+id/employeeAssignedEquipmentTextView"
            style="@style/App_TextViewStyle"
            android:text="@string/view_employee_assigned_equipment_text_view" />

        <ListView
            android:id="@+id/viewEmployeeAssignedEquipmentListView"
            style="@style/App_ListViewStyle"
            android:layout_columnSpan="2"/>

        <TextView
            android:id="@+id/employeeAddRemoveEquipmentTextView"
            style="@style/App_TextViewStyle"
            android:text="@string/employee_add_equipment_text_view" />

        <Spinner
            android:id="@+id/employeeAddRemoveEquipmentSpinner"
            style="@style/App_SpinnerStyle"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/removeEquipmentButton"
            style="@style/App_ButtonStyle"
            android:onClick="removeEquipment"
            android:text="@string/minus" />

        <Button
            android:id="@+id/addEquipmentButton"
            style="@style/App_ButtonStyle"
            android:onClick="addEquipment"
            android:text="@string/plus" />

        <EditText
            android:id="@+id/viewEmployeeNotesEditText"
            style="@style/App_EditTextStyle"
            android:layout_rowSpan="3"
            android:layout_columnSpan="2"
            android:minLines="10"
            android:text="@string/employee_notes_text_view" />

        <Button
            android:id="@+id/updateNotesButton"
            style="@style/App_ButtonStyle"
            android:onClick="saveNotes"
            android:text="@string/saveNotes" />



        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>