<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEquipmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/createEmployeeGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:columnCount="1"
            android:useDefaultMargins="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/equipmentTypeTextView"
                style="@style/App_TextViewStyle"
                android:text="@string/equipment_type_text_view" />

            <Spinner
                android:id="@+id/equipmentTypeSpinner"
                style="@style/App_SpinnerStyle"
                android:entries="@array/equipment_type_options"
                android:prompt="@string/equipment_type_prompt"
                android:text="@string/blank" />

            <TextView
                android:id="@+id/equipmentBrandTextView"
                style="@style/App_TextViewStyle"
                android:text="@string/equipment_brand_text_view" />

           <Spinner
                android:id="@+id/equipmentBrandSpinner"
                style="@style/App_SpinnerStyle"
                android:entries="@array/equipment_brand_options"
                android:prompt="@string/equipment_brand_prompt"
                android:text="@string/blank" />

            <TextView
                android:id="@+id/equipmentSerialTextView"
                style="@style/App_TextViewStyle"
                android:text="@string/equipment_serial_text_view" />

            <EditText
                android:id="@+id/equipmentSerialEditText"
                style="@style/App_EditTextStyle" />

            <TextView
                android:id="@+id/equipmentNotesTextView"
                style="@style/App_TextViewStyle"
                android:text="@string/equipment_notes_text_view" />

            <EditText
                android:id="@+id/equipmentNotesEditText"
                style="@style/App_EditTextStyle"
                android:layout_rowSpan="3"
                android:layout_columnSpan="1"
                android:minLines="10" />

            <Button
                android:id="@+id/equipmentCreateButton"
                style="@style/App_ButtonStyle"
                android:text="@string/create_equipment_button" />
        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>