<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEquipmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/viewEmployeeGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:columnCount="2"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/equipmentTypeTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/equipment_type_text_view" />

            <TextView
                android:id="@+id/viewEquipmentTypeTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/viewEquipmentBrandTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/equipment_brand_text_view" />

            <TextView
                android:id="@+id/equipmentBrandTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/equipmentSerialTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/equipment_serial_text_view" />

            <TextView
                android:id="@+id/viewEquipmentSerialTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/equipmentAssignedToTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/equipment_assigned_to_text_view" />

            <TextView
                android:id="@+id/viewEquipmentAssignedToTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/equipmentDateTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/equipment_date_text_view" />

            <TextView
                android:id="@+id/viewEquipmentDateTextView"
                style="@style/App_TextViewStyle"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/placeholder" />

            <EditText
                android:id="@+id/equipmentNotesEditText"
                style="@style/App_EditTextStyle"
                android:layout_rowSpan="3"
                android:layout_columnSpan="2"
                android:minLines="10"
                android:text="@string/equipment_notes_text_view" />

            <Button
                android:id="@+id/updateNotesButton"
                style="@style/App_ButtonStyle"
                android:onClick="saveNotes"
                android:text="@string/saveNotes" />



        </GridLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>